// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color: red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "color": {
      "setterCode": "setColor(0xffff0000)",
      "valueCode": "0xffff0000",
    },
  },
}
`;

exports[`color: red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`font-family: Arial: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "font-family": {
      "setterCode": "setFontFamily("Arial")",
      "valueCode": ""Arial"",
    },
  },
}
`;

exports[`font-family: Arial: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`font-size: 10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "font-size": {
      "setterCode": "setFontSize(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`font-size: 10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`font-style: italic: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "font-style": {
      "setterCode": "setFontStyle(UTSCPP.propertyAccess(UniCSSFontStyleType, "::", "Italic"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFontStyleType, "::", "Italic")",
    },
  },
}
`;

exports[`font-style: italic: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`font-style: normal: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "font-style": {
      "setterCode": "setFontStyle(UTSCPP.propertyAccess(UniCSSFontStyleType, "::", "Normal"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFontStyleType, "::", "Normal")",
    },
  },
}
`;

exports[`font-style: normal: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`font-weight: 400: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "font-weight": {
      "setterCode": "setFontWeight(400)",
      "valueCode": "400",
    },
  },
}
`;

exports[`font-weight: 400: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`font-weight: 700: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "font-weight": {
      "setterCode": "setFontWeight(700)",
      "valueCode": "700",
    },
  },
}
`;

exports[`font-weight: 700: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`font-weight: bold: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "font-weight": {
      "setterCode": "setFontWeight(UTSCPP.propertyAccess(UniCSSFontWeightType, "::", "Bold"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFontWeightType, "::", "Bold")",
    },
  },
}
`;

exports[`font-weight: bold: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`font-weight: normal: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "font-weight": {
      "setterCode": "setFontWeight(UTSCPP.propertyAccess(UniCSSFontWeightType, "::", "Normal"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFontWeightType, "::", "Normal")",
    },
  },
}
`;

exports[`font-weight: normal: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`letter-spacing: 10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "letter-spacing": {
      "setterCode": "setLetterSpacing(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`letter-spacing: 10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`line-height: 10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "line-height": {
      "setterCode": "setLineHeight(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`line-height: 10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`line-height: normal: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "line-height",
        "important": false,
        "prop": "lineHeight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "normal",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`normal\` is not supported for \`line-height\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`line-height: normal: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "line-height",
        "important": false,
        "prop": "lineHeight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "normal",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`normal\` is not supported for \`line-height\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-align: center: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "text-align": {
      "setterCode": "setTextAlign(UTSCPP.propertyAccess(UniCSSTextAlign, "::", "Center"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSTextAlign, "::", "Center")",
    },
  },
}
`;

exports[`text-align: center: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`text-align: justify: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-align",
        "important": false,
        "prop": "textAlign",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "justify",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`justify\` is not supported for \`text-align\` (supported values are: \`left\`|\`center\`|\`right\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-align: justify: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-align",
        "important": false,
        "prop": "textAlign",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "justify",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`justify\` is not supported for \`text-align\` (supported values are: \`left\`|\`center\`|\`right\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-align: left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "text-align": {
      "setterCode": "setTextAlign(UTSCPP.propertyAccess(UniCSSTextAlign, "::", "Left"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSTextAlign, "::", "Left")",
    },
  },
}
`;

exports[`text-align: left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`text-align: right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "text-align": {
      "setterCode": "setTextAlign(UTSCPP.propertyAccess(UniCSSTextAlign, "::", "Right"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSTextAlign, "::", "Right")",
    },
  },
}
`;

exports[`text-align: right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`text-decoration-line: line-through: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "text-decoration-line": {
      "setterCode": "setTextDecorationLine(UTSCPP.propertyAccess(UniCSSTextDecorationLineType, "::", "LineThrough"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSTextDecorationLineType, "::", "LineThrough")",
    },
  },
}
`;

exports[`text-decoration-line: line-through: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`text-decoration-line: none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "text-decoration-line": {
      "setterCode": "setTextDecorationLine(UTSCPP.propertyAccess(UniCSSTextDecorationLineType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSTextDecorationLineType, "::", "None")",
    },
  },
}
`;

exports[`text-decoration-line: none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`text-decoration-line: overline: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-decoration-line",
        "important": false,
        "prop": "textDecorationLine",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "overline",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`overline\` is not supported for \`text-decoration-line\` (supported values are: \`underline\`|\`line-through\`|\`none\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-decoration-line: overline: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-decoration-line",
        "important": false,
        "prop": "textDecorationLine",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "overline",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`overline\` is not supported for \`text-decoration-line\` (supported values are: \`underline\`|\`line-through\`|\`none\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-decoration-line: underline: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "text-decoration-line": {
      "setterCode": "setTextDecorationLine(UTSCPP.propertyAccess(UniCSSTextDecorationLineType, "::", "Underline"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSTextDecorationLineType, "::", "Underline")",
    },
  },
}
`;

exports[`text-decoration-line: underline: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`text-overflow: clip: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "text-overflow": {
      "setterCode": "setTextOverflow(UTSCPP.propertyAccess(UniCSSTextOverflow, "::", "Clip"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSTextOverflow, "::", "Clip")",
    },
  },
}
`;

exports[`text-overflow: clip: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`text-overflow: ellipsis: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "text-overflow": {
      "setterCode": "setTextOverflow(UTSCPP.propertyAccess(UniCSSTextOverflow, "::", "Ellipsis"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSTextOverflow, "::", "Ellipsis")",
    },
  },
}
`;

exports[`text-overflow: ellipsis: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`text-shadow: #fc0 1px 0 10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-shadow",
        "important": false,
        "prop": "textShadow",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "#fc0 1px 0 10px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`text-shadow\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-shadow: #fc0 1px 0 10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-shadow",
        "important": false,
        "prop": "textShadow",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "#fc0 1px 0 10px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`text-shadow\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-shadow: 1px 1px 2px pink: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-shadow",
        "important": false,
        "prop": "textShadow",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1px 1px 2px pink",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`text-shadow\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-shadow: 1px 1px 2px pink: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-shadow",
        "important": false,
        "prop": "textShadow",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "1px 1px 2px pink",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`text-shadow\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-shadow: 5px 5px #558abb: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-shadow",
        "important": false,
        "prop": "textShadow",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "5px 5px #558abb",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`text-shadow\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-shadow: 5px 5px #558abb: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-shadow",
        "important": false,
        "prop": "textShadow",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "5px 5px #558abb",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`text-shadow\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-shadow: 5px 10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-shadow",
        "important": false,
        "prop": "textShadow",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "5px 10px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`text-shadow\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-shadow: 5px 10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-shadow",
        "important": false,
        "prop": "textShadow",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "5px 10px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`text-shadow\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-shadow: red 2px 5px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-shadow",
        "important": false,
        "prop": "textShadow",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "red 2px 5px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`text-shadow\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`text-shadow: red 2px 5px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "text-shadow",
        "important": false,
        "prop": "textShadow",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "red 2px 5px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`text-shadow\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`view with font-size: 10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "font-size",
        "important": false,
        "prop": "fontSize",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "10px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: property \`font-size\` is only supported on \`<text>|<button>|<input>|<textarea>\`",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`view with font-size: 10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "font-size",
        "important": false,
        "prop": "fontSize",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "10px",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: property \`font-size\` is only supported on \`<text>|<button>|<input>|<textarea>\`",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`white-space: break-spaces: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "white-space",
        "important": false,
        "prop": "whiteSpace",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "break-spaces",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`break-spaces\` is not supported for \`white-space\` (supported values are: \`normal\`|\`nowrap\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`white-space: break-spaces: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "white-space",
        "important": false,
        "prop": "whiteSpace",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "break-spaces",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`break-spaces\` is not supported for \`white-space\` (supported values are: \`normal\`|\`nowrap\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`white-space: normal: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "white-space": {
      "setterCode": "setWhiteSpace(UTSCPP.propertyAccess(UniCSSWhiteSpace, "::", "Normal"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSWhiteSpace, "::", "Normal")",
    },
  },
}
`;

exports[`white-space: normal: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`white-space: nowrap: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "white-space": {
      "setterCode": "setWhiteSpace(UTSCPP.propertyAccess(UniCSSWhiteSpace, "::", "Nowrap"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSWhiteSpace, "::", "Nowrap")",
    },
  },
}
`;

exports[`white-space: nowrap: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`white-space: pre: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "white-space",
        "important": false,
        "prop": "whiteSpace",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "pre",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`pre\` is not supported for \`white-space\` (supported values are: \`normal\`|\`nowrap\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`white-space: pre: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "white-space",
        "important": false,
        "prop": "whiteSpace",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "pre",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`pre\` is not supported for \`white-space\` (supported values are: \`normal\`|\`nowrap\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`white-space: pre-line: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "white-space",
        "important": false,
        "prop": "whiteSpace",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "pre-line",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`pre-line\` is not supported for \`white-space\` (supported values are: \`normal\`|\`nowrap\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`white-space: pre-line: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "white-space",
        "important": false,
        "prop": "whiteSpace",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "pre-line",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`pre-line\` is not supported for \`white-space\` (supported values are: \`normal\`|\`nowrap\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`white-space: pre-wrap: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "white-space",
        "important": false,
        "prop": "whiteSpace",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "pre-wrap",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`pre-wrap\` is not supported for \`white-space\` (supported values are: \`normal\`|\`nowrap\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`white-space: pre-wrap: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "white-space",
        "important": false,
        "prop": "whiteSpace",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "pre-wrap",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`pre-wrap\` is not supported for \`white-space\` (supported values are: \`normal\`|\`nowrap\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;
